Set QR code style in CSS, not JS Fix QR Codes not working in Windows High-contrast

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -371,17 +371,26 @@ input::-webkit-input-placeholder {
     margin-bottom: 0;
 }
 
-.mmln-f {
-    display: block;
-    position: absolute;
-    left: -100%;
-    height: 0;
-    width: 0;
-    overflow: hidden;
+#QRCodeResult td:not(.b) {
+    background-color: white;
 }
 
-svg image.mml-i {
-    display: none;
+#QRCodeResult td.b {
+    background-color: black;
+}
+
+@media screen and (-ms-high-contrast: active) {
+    #QRCodeResult[aria-label^='T'] {
+        border: 1px solid white;
+    }
+
+    #QRCodeResult td:not(.b) {
+        background-color: white;
+    }
+
+    #QRCodeResult td.b {
+        background-color: black;
+    }
 }
 
 @supports (display: flex) {
